tests/negative/byte_range.disturb
numbers = [256];
numbers.toByte();
